# harness

./: README.md  main.py  pyproject.toml
2.1/arch-router/: router.py
2.2/planmode-advanced/: a.drawio  graph.py  llm.py  prompts.py  tools.py
2.2/planmode-sample/: a.drawio  graph.py  llm.py  readme.md  tools.py
2.3/reflection/: a.drawio  graph.py  llm.py  prompts.py
2.4/codeact/: graph.py  prompts.py  stock_chart.html  tools.py
2.5/human/: graph.py  tools.py
2.5/human2/: a.drawio  graph.py  llm.py  prompts.py  tools.py
3.2/websearch1/: agent.py  llm.py  tools.py
3.2/websearch2/: agent.py  tools.py
3.3/deep-thinking/: agent.py  app.py  llm.py  prompts.py  thinktools.py  webtools.py
4.2/mem0-graph-sample/: chat.py  mem0_graph_chat_simple.py  test_search.py  test_store.py  对话流程.md
4.2/mem0-graph-sample/docker/: docker-compose-neo4j.yaml
4.3/: docker-compose.yaml
4.3/mem0-sample/: .env  mem0_chat_with_cache.py  search_mem.py  store_mem.py
6.1/01AgentLoop/: agent.py
6.1/02MoreTools/: agent.py
6.2/03Plan/: agent.py
6.2/04subagents/: agent.py
6.2/05skills/: agent.py
6.2/skills/competitor-analysis/: SKILL.md
6.2/skills/content-gap-analysis/: SKILL.md
6.2/skills/keyword-research/: SKILL.md
6.2/skills/serp-analysis/: SKILL.md
6.3/06compact/: agent.py
6.3/07tasksystem/: agent.py
6.3/08backgrondtask/: agent.py
6.4/09agentteams/: agent.py
