[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-neo4j>=0.9.0",
    "langgraph>=1.2.1",
    "matplotlib>=3.10.9",
    "mem0ai[graph,nlp]>=2.0.2",
    "neo4j>=6.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
]
